# devstats

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: circleci.yml  release.yml
devstats/: .gitignore  __init__.py  __main__.py  publish.py  query.py  template.md
devstats/queries/: issue_activity_since_date.gql  pr_data_query.gql  repo_stars.gql
devstats/reports/: analysis_template.md  index.md  issue_first_responders.md  issue_time_to_response.md  issues.md  new_issues.md  preamble.md  prs_contributor_origin.md  prs_filter.md  prs_lifetime.md  prs_mergeability.md  prs_merged_over_time.md  prs_participants.md  prs_pony_factor.md
devstats/reports/issues/: first_responders.md  new_issues.md  time_to_response.md
devstats/reports/pull_requests/: mergeability_of_open_prs.md  merged_prs_over_time.md  number_of_pr_participants.md  pony_factor.md  pr_lifetime.md  where_contributions_come_from.md
