[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "devstats"
version = "0.1rc3"
requires-python = ">=3.8"
description = "Developer tool for scientific Python libraries"
license = {file = "LICENSE"}
maintainers = [
  {name = "Scientific Python", email = "devstats@discuss.scientific-python.org"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "click",
  "requests",
  "jupyter",
  "notebook",
  "numpy",
  "networkx",
]

[project.scripts]
devstats = "devstats.__main__:cli"

[project.optional-dependencies]
lint = ["pre-commit == 3.3.3"]
dev = ["changelist == 0.1"]

[project.urls]
homepage = "https://github.com/scientific-python/devstats"

[tool.setuptools.packages.find]
include = ["devstats*"]

[tool.setuptools.package-data]
"*" = ["*.gql", "*.md"]
