[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "devstats"
version = "0.2rc0.dev0"
requires-python = ">=3.8"
description = "Developer tool for scientific Python libraries"
license = {file = "LICENSE"}
readme = "tREADME.md"
maintainers = [
  {name = "Scientific Python", email = "devstats@discuss.scientific-python.org"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "click",
  "requests",
  "jupyter",
  "notebook",
  "numpy",
  "networkx",
]

[project.scripts]
devstats = "devstats.__main__:cli"

[project.optional-dependencies]
lint = ["pre-commit == 3.7.1"]
dev = ["changelist == 0.5"]

[project.urls]
homepage = "https://github.com/scientific-python/devstats"

[tool.changelist]
ignored_user_logins = ["dependabot[bot]", "pre-commit-ci[bot]", "web-flow"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
#  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "FURB",     # refurb
  "PYI",      # flake8-pyi
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "ARG002",   # Unused method argument
  "EM101",    # Exception must not use a string literal
  "SIM115",   # Use context handler for opening files
  "RET504",   # Unnecessary assignment before `return` statement
  "T201",     # `print` found
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"

[tool.setuptools.packages.find]
include = ["devstats*"]

[tool.setuptools.package-data]
"*" = ["*.gql", "*.md"]
